--- a/taotao-manager/taotao-manager-web/.settings/org.eclipse.core.resources.prefs
+++ b/taotao-manager/taotao-manager-web/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,6 @@
 eclipse.preferences.version=1
+encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/resources/resource/db.properties=UTF-8
+encoding//src/main/resources/resource/picture.properties=UTF-8
+encoding//src/test/java=UTF-8
